# test_multi_process_pandas

./: .gitignore  CLAUDE.md  LICENSE_fr  MANIFEST.in  index.rst  pyproject.toml  requirements.txt  requirements_pipreqs.in  setup.cfg  setup.py
data/: data_file.csv
docs/: architecture.rst  conf.py  index.rst  modules.rst
docs/api/: index.rst  main.rst
src/test_multi_process_pandas/: main.py  process_monitor.py
src/test_multi_process_pandas/documentation/: IPC_explained.md
src/test_multi_process_pandas/model/: APPDATA.py  APPLOGGING.py
src/test_multi_process_pandas/resources/: test.qrc
src/test_multi_process_pandas/resources/icons/: Boutons.qrc  Boutons_rc.py
src/test_multi_process_pandas/views/: main.ui  ui_main.py
tests/: conftest.py  test_acq_worker.py  test_compile_ui.py  test_data_watcher.py  test_main_window.py
