[project]
name = "test_multi_process_pandas"
version = "2026.0.1"
description = "exemple of multiprocesst"
dependencies = [
    "pandas",
    "numpy",
    "PyQt6",
    "pyqtgraph>=0.13.7",
]
requires-python = ">=3.9"
authors = [{ name = "Lolo"}]
license = "GPL-3.0-or-later"
# license = { file = "LICENSE" }

# classifiers = [
#     "Programming Language :: Python :: 3",
#     "Operating System :: OS Independent"
# ]
#
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Private :: Do Not Upload",
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
test-multi-process-pandas = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "test-multi-process-pandas",
]

#
# [project.scripts]
# process-net-monitor = "process_net_monitor.cli:main"



#requires = [
#    "setuptools>=42",
#    "wheel"
#]
