[project]
name = "test_multi_process_pandas"
version = "2026.0.1"
description = "exemple of multiprocess"
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "PyQt6>=6.6",
    "pyqtgraph==0.13.7",
    "sounddevice>=0.5.5",
    "psutil>=5.9",
    "plotext>=5.3",
    "dbus-python>=1.3",
]
requires-python = "==3.11.15"
authors = [{ name = "Lolo"}]
license = "GPL-3.0-or-later"
# license = { file = "LICENSE" }





classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Private :: Do Not Upload",
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
    ".",
    ".",
    ".",
]

[tool.uv.sources]
test-multi-process-pandas = { workspace = true, editable = true }

[tool.uv.extra-build-dependencies]
      numpy = ["distutils.msvccompiler"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
    "test-multi-process-pandas",
]

#
# [project.scripts]
# process-net-monitor = "process_net_monitor.cli:main"


[tool.pytest.ini_options]
testpaths   = ["tests"]
qt_api      = "pyqt6"

[tool.pytest.ini_options.env]
QT_QPA_PLATFORM = "offscreen"
