[metadata]
# replace with your username:
name = AbsorptionLaser
version = 1.0
author = Laurent_bruel
author_email = lolo.pupub@free.fr
description = Mesure d'absorption Laser  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
# instead, you have to use find_namespace to include dirs that doesn’t contain __init__.py ::
# packages = find_namespace:

# include = pkg*
# exclude = additional



# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
